# paymobx

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: full_usage_example.py
examples/django_example/core/: settings.py
examples/django_example/payments/: urls.py  views.py
examples/django_example/payments/templates/payments/: index.html  status.html
paymobx/: __init__.py  client.py  exceptions.py  utils.py
paymobx/integrations/: django.py
