[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paymobx"
version = "1.0.0"
authors = [
  { name="ahmhesham", email="contact.ahmhesham@gmail.com" },
]
description = "A professional, internationally-ready paymobx Python gateway library."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["paymobx*"]
